GNOME Bugzilla – Bug 723813
Fix the build of tools on Windows/MSVC
Last modified: 2014-02-07 11:02:44 UTC
Created attachment 268371 [details] [review] Fix the build of tools on Windows when we don't have unistd.h Hi, There are two new utility programs that were added for JSON-GLib, which unfortunately did not build on Windows/MSVC due to an unconditional include of unistd.h, which is unfortunately not universally available. The patch attached here is meant to fix the build of those tools under such situations, and the definition of STDOUT_FILENO is taken from the MinGW unistd.h header, to be used when unistd.h is not available on Windows. With blessings, thank you!
Review of attachment 268371 [details] [review]: looks good.
Review of attachment 268371 [details] [review]: Hi Emmanuele, Thanks for the reviews. The patch was pushed as d97be101. With blessings, thank you!