json-glib/json-glib-validate.c
@@ -23,7 +23,9 @@
 
 #include "config.h"
 
+#ifdef HAVE_UNISTD_H
 #include <unistd.h>
+#endif
 #include <stdlib.h>
 #include <stdio.h>
 #include <locale.h>
